--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,20 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light">
-        <activity android:name=".FragmentActivityToCheckInternet" android:theme="@style/Theme.AppCompat.Light">
+        <activity android:name=".ActivityWithFragment" android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <receiver
-                android:name=".NetworkConnectivityReceiver"
-                android:enabled="true" >
-            <intent-filter>
-                <!-- Intent filters for broadcast receiver -->
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-            </intent-filter>
-        </receiver>
+        <!--<receiver-->
+                <!--android:name=".NetworkConnectivityReceiver"-->
+                <!--android:enabled="true" >-->
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash; Intent filters for broadcast receiver &ndash;&gt;-->
+                <!--<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
     </application>
 </manifest>
